fix overflow x

--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -3,8 +3,16 @@
 @import '~bootstrap/scss/mixins';
 @import url('https://fonts.cdnfonts.com/css/segoe-ui-4');
 
+html{
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+*{
+  max-width: 100vw;
 }
 
 $custom-colors: (
